[gd_scene load_steps=15 format=3 uid="uid://bj822yvrkfhia"]

[ext_resource type="Script" uid="uid://dq3jwnl05tys0" path="res://Scripts/Enemies/Bugs/enemy_bug_projectile.gd" id="1_na6vt"]
[ext_resource type="Script" uid="uid://d18levtavdqhi" path="res://Scripts/ComponentScripts/HitBox.gd" id="2_8wvlg"]
[ext_resource type="Texture2D" uid="uid://t6hb5g3s40xo" path="res://Assets/Images/SpriteSheets/Animations/enemies/boss_1/boss-1-projectile.png" id="2_em22q"]
[ext_resource type="Texture2D" uid="uid://ch78sxpt34rs2" path="res://Assets/Images/SpriteSheets/Animations/enemies/Alien-Projectile-1.png" id="3_twybi"]

[sub_resource type="AtlasTexture" id="AtlasTexture_50wnr"]
atlas = ExtResource("2_em22q")
region = Rect2(1, 0, 16, 18)

[sub_resource type="AtlasTexture" id="AtlasTexture_ukaas"]
atlas = ExtResource("2_em22q")
region = Rect2(17, 0, 16, 18)

[sub_resource type="AtlasTexture" id="AtlasTexture_hpjib"]
atlas = ExtResource("2_em22q")
region = Rect2(33, 0, 16, 18)

[sub_resource type="AtlasTexture" id="AtlasTexture_v56g2"]
atlas = ExtResource("2_em22q")
region = Rect2(49, 0, 16, 18)

[sub_resource type="AtlasTexture" id="AtlasTexture_vn5jb"]
atlas = ExtResource("3_twybi")
region = Rect2(1, 0, 16, 18)

[sub_resource type="AtlasTexture" id="AtlasTexture_hw11a"]
atlas = ExtResource("3_twybi")
region = Rect2(17, 0, 16, 18)

[sub_resource type="AtlasTexture" id="AtlasTexture_jcb64"]
atlas = ExtResource("3_twybi")
region = Rect2(33, 0, 16, 18)

[sub_resource type="AtlasTexture" id="AtlasTexture_7auk0"]
atlas = ExtResource("3_twybi")
region = Rect2(49, 0, 16, 18)

[sub_resource type="SpriteFrames" id="SpriteFrames_5tx31"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_50wnr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ukaas")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hpjib")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_v56g2")
}],
"loop": true,
"name": &"boss",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_vn5jb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hw11a")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jcb64")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7auk0")
}],
"loop": true,
"name": &"default",
"speed": 8.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_fohrp"]
radius = 22.0

[node name="EnemyProjectile" type="CharacterBody2D"]
z_index = 99
collision_layer = 2
collision_mask = 0
script = ExtResource("1_na6vt")
SPEED = 300.0
IMPACT_SFX = "EnemyProjectileHitSFX"
TIME_UNTIL_CLEANUP = 10.0

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(0, -16)
scale = Vector2(5, 5)
sprite_frames = SubResource("SpriteFrames_5tx31")
autoplay = "default"
frame_progress = 0.550998

[node name="HitBox" type="Area2D" parent="."]
z_index = 5
collision_layer = 2
script = ExtResource("2_8wvlg")

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitBox"]
shape = SubResource("CircleShape2D_fohrp")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource("CircleShape2D_fohrp")

[connection signal="area_entered" from="HitBox" to="HitBox" method="_on_area_entered"]
[connection signal="hitbox_triggered" from="HitBox" to="." method="_on_hit_box_hitbox_triggered"]
